Added build status

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://travis-ci.org/UBMLtonGroup/RTMLton.svg?branch=conc-stacklets)](https://travis-ci.org/UBMLtonGroup/RTMLton)
+
 RTMLton is a modification of the MLton compiler for Standard ML adding a real-time garbage collector, and threading features. 
 
 
